--- a/src/app/alimentos/alimentos.component.html
+++ b/src/app/alimentos/alimentos.component.html
@@ -85,7 +85,7 @@
                       {{item.gramoPersona}}
                     </td>
                     <td>
-                      {{item.precio}}
+                      {{item.precio  |  number:'1.2-2'}}
                     </td>
                     <td>
                     <!-- Botones de editar y eliminar alimentos -->
