--- a/src/app/platos/platos.component.html
+++ b/src/app/platos/platos.component.html
@@ -74,7 +74,7 @@
                     <td>{{ startIndex + i + 1 }}</td>
                     <td>{{ item.tipo_menu.tipo }}</td>
                     <td>{{ item.descripcion }}</td>
-                    <td>{{ item.precio }}</td>
+                    <td>{{ item.precio  |  number:'1.2-2' }}</td>
                     <td>
                       <button1 color="primary" (click)="editarPlato(item)">
                         <i class="material-icons editable-row" data-toggle="modal" data-target="#ventanaForm">edit</i>
