--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -245,7 +245,7 @@
 
 
                 </thead>
-                <tbody *ngFor="let item of usuariosss;let i=index ">
+                <tbody *ngFor="let item of pagedMenus;let i=index ">
                   <tr>
                     <td>
                       {{i+1}}
